[OGG-95] Increased z-index of default upload panel, to ensure it sits a top of the various other dragdrop screen UI's that are initially hidden from view.

--- a/src/css/drop-panel.css
+++ b/src/css/drop-panel.css
@@ -216,6 +216,7 @@
 
   #drag-and-drop-default{
     transition: opacity 0.5s ease-in-out;
+    z-index: 1003;
  
   }
 
